--- a/mypractice/contact.html
+++ b/mypractice/contact.html
@@ -28,3 +28,10 @@
     <li>Phone: 555-555-5555</li>
   </ul>
 </main>
+
+<footer>
+  <small<>i>Copyright &copy; 2026 Jenna Pulley</small>i></small> 
+</footer>
+
+</body>
+</html>
