--- a/mypractice/contact.html
+++ b/mypractice/contact.html
@@ -15,7 +15,7 @@
   <b>
     <a href="index.html">Home</a>&nbsp;
     <a href="services.html">Services</a>&nbsp;
-    <a href="contact.html">Contact</a>
+    <a href="contact.html">Contact</a>&nbsp;
   </b>
 </nav>
 
