--- a/mypractice/services.html
+++ b/mypractice/services.html
@@ -13,9 +13,9 @@
 
 <nav>
   <b>
-    <a href="index.html">Home</a> &nbsp;
-    <a href="services.html">Services</a> &nbsp;
-    <a href="contact.html">Contact</a>
+    <a href="index.html">Home</a>&nbsp;
+    <a href="services.html">Services</a>&nbsp;
+    <a href="contact.html">Contact</a>&nbsp;
   </b>
 </nav>
 
